Sitio web creado

--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Taller Eventos</title>
+    <script src="eventos.js"></script>
 </head>
 <body>
     <h1>Taller De Eventos</h1>
-    <button id="myButton">Saludar</button>
-
-
+    <button onclick="saludar()">Saludar</button>
 </body>
 </html>
