--- a/index.html
+++ b/index.html
@@ -4,10 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Taller Eventos</title>
-    <script src="eventos.js"></script>
+    <script src="eventos.js" ></script>
+      <style>
+    #div1 {
+      padding: 5px;
+      background-color: green;
+    }
+  </style>
 </head>
 <body>
     <h1>Taller De Eventos</h1>
+  <div id="div1">
     <button onclick="saludar()">Saludar</button>
+  </div>
 </body>
 </html>
